# starbot

./: .gitignore  CLAUDE.md  DEPLOYMENT_STATUS.md  FIXES_COMPLETED.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  README_TOOLS.md  SPEC6_COMPLETION_REPORT.md  SPEC6_SUMMARY.txt  TESTING_TOOLS.md  TOOL_IMPLEMENTATION_COMPLETE.md  TOOL_USAGE_GUIDE.md  VERIFICATION_CHECKLIST.md
.github/workflows/: api.yml  tui.yml  webgui.yml
Starbot_API/: .env.example  TESTING_STATUS.md  package-lock.json  package.json  pnpm-lock.yaml  test-api.sh  test-schema.prisma  test-triage.ts  vitest.config.ts
Starbot_API/prisma/: schema.prisma
Starbot_API/src/: db.ts  env.ts  (+1 more)
Starbot_Probe/: package-lock.json  package.json  tsconfig.json
Starbot_TUI/: Cargo.toml  README.md  remove_duplicates.py
Starbot_TUI/cli/: Cargo.toml
Starbot_TUI/cli/scripts/: smoke.sh
Starbot_TUI/cli/src/: app.rs  config.rs  errors.rs  output.rs
Starbot_TUI/cli/src/commands/: billing.rs  chat.rs  mod.rs  usage.rs
Starbot_TUI/cli/src/tui/: types.rs
Starbot_TUI/cli/src/tui/handlers/: async_ops.rs  key.rs  message.rs  mod.rs
Starbot_WebGUI/: next.config.ts  package-lock.json  package.json
deploy/: DEPLOYMENT.md  QUICKSTART.md  caddy-starbot-systemd.caddy  deploy.sh  nginx-starbot.cloud.conf  starbot-api.service  starbot-webgui.service
specs/: ARCHITECTURE.md  DEEPRESEARCH.md  DR_APICONTRACT.md  LOADINGSPEC.md  MEMORY_DESIGN.md  SPEC1.md  SPEC2_DEEPCODEREVIEW.md  SPEC3_CODE.md  SPEC3_STATUS_2026-02-15.md  SPEC4_IDENTITYMEMORY.md  SPEC5_TOOLUSAGE.md  SPEC6_MORETOOLS.md
(+79 files in other folders)
