[package]
name = "starbott-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "starbott"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
futures = "0.3"
thiserror = "2.0.11"
dirs = "6.0.0"
url = "2.5.4"
rpassword = "7.3.1"
open = "5.3.2"
ratatui = "0.28.1"
crossterm = "0.28.1"
unicode-width = "0.1.14"
qrcode = "0.14"
hostname = "0.4"
